objects/Scann__c.object
<CustomObject>
    <description>added from sfdx plugin</description>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <description>Branch scanned. Only available for feature branch scans</description>
        <inlineHelpText>Branch scanned. Only available for feature branch scans</inlineHelpText>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Elements__c</fullName>
        <description>Number of Configuration Elements analysed</description>
        <inlineHelpText>Number of Configuration Elements analysed</inlineHelpText>
        <label>Configuration Elements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Scan date</description>
        <inlineHelpText>Scan date</inlineHelpText>
        <label>Scan Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the Scan</description>
        <inlineHelpText>Duration of the Scan</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Internal scan id. Used only for technical support</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal scan id. Used only for technical support</inlineHelpText>
        <label>Internal ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <description>Instance for this scann</description>
        <inlineHelpText>Instance for this scann</inlineHelpText>
        <label>Instance</label>
        <referenceTo>Instance__c</referenceTo>
        <relationshipName>Scanns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Scan__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ ScanDetail?id=&quot; &amp;   ID__c  &amp; &quot;&amp;id_instance=&quot; &amp;  Instance__r.ID__c  , &quot;Link to Scan&quot;, &quot;blank&quot;)</formula>
        <label>Link to Scan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Gate_Message__c</fullName>
        <label>Quality Gate Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Gate_Result__c</fullName>
        <description>Quality Gate Result</description>
        <inlineHelpText>Quality Gate Result</inlineHelpText>
        <label>Quality Gate Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_of_Cloud__c</fullName>
        <description>Overall quality indicator, not available for feature branch scans</description>
        <inlineHelpText>Overall quality indicator, not available for feature branch scans</inlineHelpText>
        <label>Quality of Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scan_Type__c</fullName>
        <description>Scan Type</description>
        <inlineHelpText>Scan Type</inlineHelpText>
        <label>Scan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Result of the scan</description>
        <inlineHelpText>Result of the scan</inlineHelpText>
        <label>Scan Result</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Debt_hours__c</fullName>
        <description>Development time to fix the detected issues</description>
        <inlineHelpText>Development time to fix the detected issues</inlineHelpText>
        <label>Technical Debt (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Issues__c</fullName>
        <description>Number of issues detected in the scan</description>
        <inlineHelpText>Number of issues detected in the scan</inlineHelpText>
        <label>Total Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Scans</relationshipLabel>
        <relationshipName>Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>